Fix: 사이드바 z-index

--- a/client/src/components/layout/css/shopLayout.scss
+++ b/client/src/components/layout/css/shopLayout.scss
@@ -14,7 +14,7 @@
   }
   .sideBar{
     width: 150px;
-    // border: 1px solid black;
+    z-index: 100;
     position: relative;
     .sticky{
       position: sticky;
